--- a/views/home.html
+++ b/views/home.html
@@ -1,2 +1,13 @@
-<h1>Welcome to the Home Page</h1>
-<p>This is the home page of my SPA.</p>
+<div class="profile-card">
+    <img src="https://avatars.githubusercontent.com/u/your-github-id" alt="Nandini Chaganti" class="profile-img">
+    <h1>Hello, I'm <span class="highlight">Nandini Chaganti</span>!</h1>
+    <p class="intro">
+        Passionate about <span class="highlight">web development</span>, technology, and creative problem-solving.<br>
+        I love building interactive websites and learning new things every day.
+    </p>
+    <p>
+        This site is a showcase of my <span class="highlight">projects</span>, interests, and journey as a developer.<br>
+        <strong>Explore to learn more about me and my work!</strong>
+    </p>
+    <a href="#about" class="cta-btn">Discover More</a>
+</div>
